# jbead

./: .classpath  .gitignore  .project  CLAUDE.md  CMakeLists.txt  README.txt  bugs.txt  build.xml  checkstyle-config.xml  checkstyle-metrics.txt  create_dmg.txt  jbead.sln  reduce_jdk.txt  releasenotes.txt  sample.jbb  smells.txt  todo.txt  todo_and_smells.txt  wishlist.txt
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
csharp/JBead.SmokeTest/: JBead.SmokeTest.csproj  Program.cs
csharp/JBead.Web/: App.razor  JBead.Web.csproj  Program.cs  _Imports.razor
i18n/: jbead_de.ts  jbead_fr.ts
legacy/: releasenotes.txt
legacy/setup/: jbead.nsi
legacy/starter_linux/: jbead
packaging/: README.md
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
samples/: hearts.jbb  small_hearts.jbb  spiral.jbby  stripes.jbb
setup/: jbead.nsi
setup_win/: jbead.nsi
src/: CMakeLists.txt  aboutbox_form.cpp  aboutbox_form.dfm  aboutbox_form.h  assert.cpp  assert.h  bead_form.cpp  bead_form.dfm  bead_form.h  bead_print.cpp  copy_form.cpp  copy_form.dfm  copy_form.h  dbbead.cpp  jbead.properties  jbead_de.properties  jbead_pl.properties  lang_main.cpp  language.cpp  language.h  main.cpp  mru.cpp  patternwidth_form.cpp  patternwidth_form.dfm  patternwidth_form.h  settings.cpp  settings.h  version.h.in
src.test/: jbead_test.properties
src/ch/jbead/: AboutBox.java  BaseAction.java  BasePanel.java  BeadCounts.java  BeadField.java  BeadForm.java  BeadList.java  BeadPainter.java  BeadRun.java  BeadSymbols.java  BeadUndo.java  Button.java  ColorButton.java  ColorIcon.java  ColorPalette.java  ColorTable.java  ColorsToolbar.java  CombinedFileFilter.java  CopyForm.java  CorrectedPanel.java  DbbFileFilter.java  DbbFileFormat.java  DbbMemento.java  Debug.java  DefaultColorPalette.java  DefaultColors.java  DesignPrinter.java  DraftPanel.java  EditArrangeAction.java  EditDeleteLineAction.java  EditInsertLineAction.java  EditRedoAction.java  EditUndoAction.java  FileExitAction.java  FileFormat.java  FileMRU1Action.java  FileMRU2Action.java  FileMRU3Action.java  FileMRU4Action.java  FileMRU5Action.java  (+59 more)
src/ch/jbead/action/: DesignPrinter.java  EditArrangeAction.java  EditDeleteAction.java  EditDeleteLineAction.java  EditDeleteRowAction.java  EditInsertLineAction.java  EditInsertRowAction.java  EditMirrorHorizontalAction.java  EditMirrorVerticalAction.java  EditRedoAction.java  EditRotateAction.java  EditUndoAction.java  FileExitAction.java  FileMRU1Action.java  FileMRU2Action.java  FileMRU3Action.java  FileMRU4Action.java  FileMRU5Action.java  FileMRU6Action.java  FileMRUAction.java  FileNewAction.java  FileOpenAction.java  FilePageSetupAction.java  FilePrintAction.java  FilePrintSetupAction.java  FileSaveAction.java  FileSaveAsAction.java  InfoAboutAction.java  InfoTechInfosAction.java  InfoUpdateCheckAction.java  PatternHeightAction.java  PatternPreferencesAction.java  PatternWidthAction.java  ToolFillAction.java  ToolPencilAction.java  ToolPipetteAction.java  ToolSelectAction.java  ViewCorrectedAction.java  ViewDraftAction.java  ViewNormalAction.java  (+5 more)
src/ch/jbead/dialog/: AboutBox.java  ArrangeDialog.java  CopyForm.java  InfoAboutDialog.java  PatternHeightDialog.java  PatternHeightForm.java  PatternWidthDialog.java  PatternWidthForm.java  PreferencesDialog.java  TechInfosDialog.java
src/ch/jbead/fileformat/: DbbFileFilter.java  DbbFileFormat.java  DbbMemento.java  FileFormat.java  JBeadMemento.java  JBeadOutputStream.java  JbbFileFilter.java  Memento.java
src/ch/jbead/print/: BeadListPrinter.java  Convert.java  CorrectedPrinter.java  DesignPrinter.java  DraftPrinter.java  GridPrinter.java  PageLayout.java  PagePart.java  PartPrinter.java  PrintSettings.java  ReportInfosPrinter.java  ReportPrinter.java  SimulationPrinter.java
src/ch/jbead/storage/: JBeadDateFormat.java  JBeadFileFormatException.java  Leaf.java  Node.java  ObjectModel.java  Parser.java  Path.java  Tokens.java
src/ch/jbead/ui/: Button.java  ColorPalette.java  ColorsToolbar.java  MRUMenuItem.java  RotateRightButton.java  SymbolFont.java  ToolMenuItem.java  ToolsGroup.java
src/ch/jbead/util/: BuildVersionBumper.java  Convert.java  MajorVersionBumper.java  MinorVersionBumper.java  Platform.java  VersionBumper.java
src/ch/jbead/version/: Version.java  VersionChecker.java  VersionCheckerThread.java  VersionListener.java
src/ch/jbead/view/: BasePanel.java  CorrectedPanel.java  DraftPanel.java  ReportPanel.java  SimulationPanel.java
src/compat/: CMakeLists.txt
src/domain/: CMakeLists.txt  beadcounts.cpp  beadcounts.h  beadfield.cpp  beadfield.h  beadlist.cpp  beadlist.h  beadpoint.h  beadrect.h  beadrun.h  beadsymbols.cpp  beadsymbols.h  beadundo.cpp  beadundo.h  defaultcolors.cpp  defaultcolors.h  model.cpp  model.h  rectiterator.h  segmentiterator.h  selection.cpp  selection.h  settings.cpp  settings.h
src/io/: CMakeLists.txt  dbbmemento.cpp  dbbmemento.h  fileformat.cpp  fileformat.h  jbeadmemento.cpp  jbeadmemento.h  jbeadstream.cpp  jbeadstream.h  memento.h  objectmodel.cpp  objectmodel.h
src/print/: CMakeLists.txt  printjob.cpp  printjob.h  printsettings.cpp  printsettings.h  strippainter.cpp  strippainter.h
src/properties/: jbead.properties
src/ui/: CMakeLists.txt  actions.cpp  actions.h  basepanel.cpp  basepanel.h  beadpainter.cpp  beadpainter.h  colorpickerdialog.cpp  colorpickerdialog.h  colorscheme.cpp  colorscheme.h  colorstoolbar.cpp  colorstoolbar.h  correctedpanel.cpp  correctedpanel.h  dialogs.cpp  dialogs.h  draftpanel.cpp  draftpanel.h  imagefactory.cpp  imagefactory.h  mainwindow.cpp  mainwindow.h  mrumanager.cpp  mrumanager.h  reportpanel.cpp  reportpanel.h  simulationpanel.cpp  simulationpanel.h  swatchbutton.cpp  swatchbutton.h
starter_linux/: jbead
starter_macosx/: Info.plist  jbead.icns
starter_win/: jbead_launch4j.xml
tests/: CMakeLists.txt  test_beadfield.cpp  test_fileformat.cpp  test_i18n.cpp  test_jbeadstream.cpp  test_mainwindow.cpp  test_model.cpp  test_objectmodel.cpp  test_printjob.cpp  test_smoke.cpp
tools/: properties_to_ts.py
(+178 files in other folders)
